# frontend.swift

./: .gitignore  CMakeLists.txt  README.md
.github-disabled/workflows/: ubuntu.yml  windows-debug-deploy.yml
.github/workflows/: macos.yml  ubuntu.yml  windows-debug-deploy.yml  windows.yml
cmake/packaging/: Frontend.pyConfig.cmake.in  Frontend.swiftConfig.cmake.in
docs/: architecture.md  examples.md.in  examples_objc.md.in  examples_swift.md.in  export_examples.sh  mkdocs.yml
docs/ReleaseNotes/: v0.1.0.md  v0.2.0.md  v0.3.0.md
docs/public/: conversions.md  naming_convention.md  quickstart.md
docs/public/objc/: conversions.md  examples.md
docs/public/swift/: conversions.md  examples.md
include/Frontend/Objc/: frontend.hpp
include/Frontend/ObjcSwift/: Config.hpp  frontend.hpp
include/Frontend/Swift/: frontend.hpp
src/Frontend/Objc/: frontend.cpp
src/Frontend/ObjcSwift/: frontend.cpp
src/Frontend/Python/: frontend.cpp
src/Frontend/Swift/: frontend.cpp
src/Objc/: cache.hpp  getName.cpp  getName.hpp  types.cpp  types.hpp  utility.cpp  utility.hpp
src/Objc/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeBuilder.cpp  typeBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Objc/Conversions/: base.cpp  base.hpp  container.cpp  container.hpp  conversions.hpp  enum.cpp  enum.hpp  getConversionName.cpp  getConversionName.hpp  userDefined.cpp  userDefined.hpp  utility.cpp  utility.hpp
src/Objc/Conversions/Container/: container.cpp  container.hpp  helpers.cpp  helpers.hpp  value.cpp  value.hpp
src/Objc/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  structure.cpp  structure.hpp  type.hpp  typeInfo.hpp
src/ObjcSwift/: Type.hpp  checkType.cpp  checkType.hpp  getOverloadedFunctions.cpp  getOverloadedFunctions.hpp  returnValuePolicy.cpp  returnValuePolicy.hpp
src/ObjcSwift/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeBuilder.cpp  typeBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/ObjcSwift/Helpers/: combine.hpp  getDocumentationParameter.cpp  getDocumentationParameter.hpp  operatorNames.cpp  operatorNames.hpp  split.cpp  split.hpp  string.cpp  string.hpp  trampolineClass.cpp  trampolineClass.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp  types.cpp  types.hpp  wrapInFunction.cpp  wrapInFunction.hpp
src/ObjcSwift/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  typeInfo.hpp
src/Swift/: cache.hpp  getName.cpp  getName.hpp  types.cpp  types.hpp
src/Swift/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeBuilder.cpp  typeBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Swift/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp
tests/: CMakeLists.txt  README.md  arrays.cpp  builtins.cpp  classes.cpp  complex.cpp  defaultArgNames.cpp  deques.cpp  documentationStyles.cpp  enums.cpp  filesystem_paths.cpp  functional.cpp  functions.cpp  globalVariables.cpp  inheritence.cpp  libraryNSClash.cpp  lists.cpp  maps.cpp  memberVariables.cpp  namespaceSameAsModule.cpp  namespaces.cpp  operators.cpp  optionals.cpp  order.cpp  overloadedFunctions.cpp  pairs.cpp  sets.cpp  smartPointers.cpp  templates.cpp  tuples.cpp  unordered_maps.cpp  unordered_sets.cpp  userDefined.cpp  valarrays.cpp  variants.cpp  vectors.cpp  virtualInheritence.cpp
tests/Objc/: extraFunctions.cpp
tests/Objc/Builders/: enumBuilder.cpp
tests/ObjcSwift/: checkType.cpp
tests/ObjcSwift/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/ObjcSwift/Helpers/: combine.cpp  typeToStringBuilder.cpp
tests/ObjcSwift/Proxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/TestUtil/include/TestUtil/: compare.hpp  objcSwiftStage.cpp  objcSwiftStage.hpp  parse.cpp  parse.hpp  pybindStage.cpp  pybindStage.hpp
tests/testStage/: .gitignore  CMakeLists.txt  README.md
tests/testStage/cmake/: Sources.cmake  TargetName.cmake
tests/testStage/src/: MyLib-Bridging-Header.h  MyLib.cpp  MyLib.hpp  MyLib_objc.h  MyLib_objc.mm  MyLib_swift.swift
tests/testStage/tests/: main.mm  main.swift
tools/packaging/: CMakeLists.txt
